Added settings for preprocessing concurrent threads
